--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <p><i>ABC, Nha Trang City</i></p>
               <ul style="list-style-position: inside;">
                 <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, eligendi.</li>
-                <li>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ab dolorem mollitia beatae doloremque asperiores porro fugiat, tenetur optio ut perferendis.</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure.</li>
               </ul>
             </div>
           </div>
