--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
               <p><i>ABC, Nha Trang City</i></p>
               <ul style="list-style-position: inside;">
                 <li>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Odio, eligendi.</li>
-                <li>Managed up to 5 projects or tasks at a given time while under pressure aa.</li>
+                <li>Managed up to 5 projects or tasks at a given time while under pressure.</li>
               </ul>
             </div>
           </div>
@@ -152,7 +152,7 @@
               </div>
             </div>
             <div style="height: 200px; width: 100%; overflow:hidden;">
-              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.7063015949852!2d109.20018721460417!3d12.268143691320109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317067ed3a052f11%3A0xd464ee0a6e53e8b7!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBOaGEgVHJhbmc!5e0!3m2!1svi!2s!4v1679203440547!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+              <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3898.7063015949852!2d109.20018721460417!3d12.268143691320109!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x317067ed3a052f11%3A0xd464ee0a6e53e8b7!2zVHLGsOG7nW5nIMSQ4bqhaSBo4buNYyBOaGEgVHJhbmc!5e0!3m2!1svi!2s!4v1679203440547!5m2!1svi!2s" width="100%" height="100%" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
             </div>
           </div>
           <div class ="col-right">
